fix(design-system): Fix grid styles to stretch cells. EX-5239

--- a/packages/x-components/src/design-system/components/grid/default.scss
+++ b/packages/x-components/src/design-system/components/grid/default.scss
@@ -4,9 +4,14 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(var(--x-size-min-width-grid-item), auto));
   grid-auto-flow: dense;
+  align-items: stretch;
   list-style: none;
   padding: var(--x-size-padding-grid);
   gap: var(--x-size-gap-grid);
+
+  &__item {
+    display: flex;
+  }
 
   &--cols-auto .x-grid__item {
     // layout
